delete timeAndDateForm component

--- a/src/app/screens/search/education/education.component.html
+++ b/src/app/screens/search/education/education.component.html
@@ -48,7 +48,7 @@
           <input
             class="header__form-group-input"
             airbnb-calendar
-            type="text"
+            type="date"
             [(ngModel)]="date"
             [options]="options"
             (ngModelChange)="dateObjChanged($event)"
