--- a/src/app/screens/order-tour/squad-assemble/components/squad-group/squad-group.component.scss
+++ b/src/app/screens/order-tour/squad-assemble/components/squad-group/squad-group.component.scss
@@ -7,7 +7,7 @@ app-form-input,
 app-form-header {
   height: 100%;
   width: 100%;
-}
+} 
 
 .container {
   padding-top: 5%;
@@ -25,3 +25,7 @@ app-form-header {
   cursor: pointer;
 }
 
+::ng-deep airbnb-calendar {
+  position:  fixed !important;
+  overflow: visible !important;
+}
